kubernetes/regional/brazil/mqtt-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mqtt-route
  namespace: staging-brazil
spec:
  parentRefs:
    - name: main-gateway
      namespace: apisix
      sectionName: mqtt
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1883
